# rule-engine

./: .dockerignore  .gitignore  .markdownlint.yaml  Dockerfile  GEMINI.md  README.md  docker-compose.yml  main.py  presentation.md  presentation_db.md  presentation_domain.md  pyproject.toml
.github/workflows/: deploy.yaml
configs/: database.py  logging_config.py
domains/common/dtos/: common_response.py  pagination_meta.py
src/: main.py
src/common/dtos/: common_response.py  custom.py  proxy_service_dto.py
src/common/utils/: get_services.py
src/configs/: api_routers.py  bert_classifier.py  color_formatter.py  colors.py  database.py  http_client.py  llm.py  llm_adapter.py  llm_manager.py  llm_manager_summary.md  logging_config.py  origins.py  redis_conn.py  setting.py
src/domains/auth/: auth_router.py  auth_service.py
src/domains/dice/: dice_service.py
src/domains/gm/: gm_domain_summary.md  (+2 more)
src/utils/: bert_download.py  dice_util.py  generate_data.py  lifespan_handlers.py  load_prompt.py  load_sql.py  logger.py  proxy_request.py  train_bert.py
test/: llm_classification_test.py  llm_test.py  play_combat_defence_scenario_request.json  play_combat_scenario_request.json  play_combat_scenario_request_2.json  play_combat_scenario_request_3.json  play_dialogue_scenario_request.json  play_exploration_box_scenario_request.json  play_exploration_item_scenario_request.json  play_exploration_npc_scenario_request.json  play_exploration_scenario_request.json  play_nego_scenario_request.json  play_recovery_scenario_request.json  play_recovery_scenario_request_2.json  play_rest_scenario_request.json  play_scene_test.py  play_unknown_scenario_request.json  test_bert.py  test_dialogue_node_new_relation.py  test_exploration_node_new_npc.py  test_phase_nodes_item_id_handling.py  test_repro_dialogue_relation.py  test_sequence_type_hint.py  test_session_service_resilience.py  visualize_llm_accuracy.py  visualize_llm_results.py
test/bert_test_logs/: bert_20260202_150044.json  bert_20260202_155409.json  kdl_bert_20260202_174545.json  kdl_bert_20260202_180704.json
test/bert_train_data/: README.md  train_data.json
test/sample_stories/: sample_stories.json
test/test_results/: llm_classification_20260210_174811.json  llm_classification_20260210_175204.json  llm_classification_20260210_175839.json  llm_classification_20260210_180604.json  llm_classification_20260210_182650.json  llm_classification_20260210_183131.json
test_logs/: bert_20260202_143113.json  bert_20260202_145727.json  bert_20260202_152442.json  bert_20260202_153617.json  bert_20260202_161032.json  bert_20260202_163058.json  bert_20260202_164926.json  kdl_bert_20260203_093001.json  kdl_bert_20260203_100829.json  kdl_bert_20260203_103336.json
train_data/: distillation_data.json
(+102 files in other folders)
