[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gtrpgm-rule-engine"
version = "0.1.0"
description = "GTRPGM 게임의 규칙 위배 여부를 판정하는 엔진입니다."
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "aiofiles>=25.1.0",
    "black>=26.1.0",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "fastapi-utils>=0.8.0",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pandas>=3.0.0",
    "protobuf>=6.33.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.11"]

[tool.ruff]
ignore = ["E501"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "INFO:     %(message)s"
